gccida/c0/print_operand
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6210:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u_1; // [rsp+58h] [rbp-118h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6213:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u_0; // [rsp+A8h] [rbp-C8h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6216:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u; // [rsp+100h] [rbp-70h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6251:24: error: use of undeclared identifier 'unk_806994'
size = ( const char *)&unk_806994; 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6275:24: error: use of undeclared identifier 'unk_806994'
size = ( const char *)&unk_806994; 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6308:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
u.d.r[2] = ( __int64)xa[2]; 
                     ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6313:18: error: use of undeclared identifier 'aEndOfChildrenO'
fprintf( filea, &aEndOfChildrenO[23], l); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6319:24: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
u_0.d.r[2] = ( __int64)xa[2]; 
                       ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6329:24: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
u_1.d.r[2] = ( __int64)xa[2]; 
                       ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6422:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)xa, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6422:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)xa, 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6423:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6423:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6433:8: error: use of undeclared identifier 'off_8081D6'
fputs( off_8081D6, filea); 
       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6468:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)xa, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6468:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)xa, 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6469:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6469:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/i386.c:6508:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)xa, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_operand/src/obj/i386.o] Error 1
